# manga-kobo-pipeline

./: .env.example  .gitignore  Dockerfile  HANDOFF_2026-06-21.md  HANDOFF_2026-07-01.md  HANDOFF_LLM_2026-06-23.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
komf/: application.yml
scripts/: setup-nas-cifs.sh
secrets/: README.md
src/manga_pipeline/: __init__.py  api.py  bangumi.py  bookwalker_jp.py  bookwalker_tw.py  calibre.py  cli.py  comicinfo.py  config.py  control.py  database.py  epub_metadata.py  filename_parser.py  kcc.py  komf_client.py  komga.py  llm_metadata.py  locks.py  logging_config.py  main.py  models.py  normalizer.py  pipeline.py  rescrape.py  review.py  scanner.py  stability.py  utils.py  watcher.py
tests/: conftest.py  test_bangumi.py  test_bookwalker_jp.py  test_bookwalker_tw.py  test_calibre_command.py  test_config.py  test_control.py  test_epub_metadata.py  test_filename_parser.py  test_integration.py  test_kcc_command.py  test_llm_metadata.py  test_pipeline_naming.py  test_rescrape.py  test_stability.py  test_state_machine.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
web/src/: api.ts  global.css  main.tsx  styles.css  types.ts
web/src/components/: CandidateCard.tsx  Sidebar.tsx  StatusBadge.tsx
web/src/pages/: Approvals.tsx  Dashboard.tsx  RecordDetail.tsx  Records.tsx  Settings.tsx
