[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manga-kobo-pipeline"
version = "0.1.0"
description = "Automated manga pipeline: scan → parse → convert (KCC) → import (Komga) for Kobo Sage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "manga-pipeline" },
]

dependencies = [
    "typer>=0.12,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pyyaml>=6,<7",
    "watchdog>=4,<6",
    "rich>=13,<15",
    "rarfile>=4,<5",
    "requests>=2,<3",
    "opencc-python-reimplemented>=0.1.7,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
archives = [
    "py7zr>=0.21,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-mock>=3,<4",
    "ruff>=0.5,<1",
]
full = [
    "manga-kobo-pipeline[archives,dev]",
]

[project.scripts]
manga-pipeline = "manga_pipeline.main:app"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "UP045", # Typer requires Optional[X] instead of X | None
]

[tool.ruff.lint.per-file-ignores]
"src/manga_pipeline/cli.py" = ["B008"]  # Typer uses function calls in defaults
"src/manga_pipeline/api.py" = ["B008"]  # FastAPI uses Depends/Cookie in defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/manga_pipeline"]
